--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ html {
 
 /* links */
 a { color: #F5D6EA; text-decoration: none; }	
-a:hover { color: transparent; text-shadow: 0 0 3px #F0F0F0; }
+a:hover code:hover { color: transparent; text-shadow: 0 0 3px #F0F0F0; }
 
 /* blockquotes */
 blockquote {
