--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,7 @@ html {
 
 /* links */
 a { color: #F5D6EA; text-decoration: none; }	
+a:hover { color: transparent; text-shadow: 0 0 3px #F0F0F0; }
 a:hover code:hover { color: transparent; text-shadow: 0 0 3px #F0F0F0; }
 
 /* blockquotes */
@@ -84,7 +85,8 @@ code {
 	text-shadow: 2px 2px 5px #646464;
 }
 
-h* code { font-size: unset; }
+/* code blocks in headings */
+h1 code { font-size: unset; }
 h2 code { font-size: unset; }
 h3 code { font-size: unset; }
 h4 code { font-size: unset; }
