--- a/static/style.css
+++ b/static/style.css
@@ -119,7 +119,8 @@ pre {
 	display: table;
 	border: 2px solid #646464;
 	padding: 3px 10px 3px 10px;
-	margin: 0 0 15px 0;
+	margin: 0 15px 15px 0;
+	float: left;
 }                        
 
 /* tables */
@@ -156,7 +157,7 @@ tr:nth-child(even) { background: rgba(0, 0, 0, 40%); }
 	.navbar li:not(:last-child):after { content: " | "; } 
 	/* align special elements to edge of display */
 	pre { margin: unset; }
-	.toc { font-size: unset; }
+	.toc { font-size: unset; float: unset; }
 	table { margin: unset; }
 }
 
