--- a/static/style.css
+++ b/static/style.css
@@ -57,6 +57,16 @@ html {
 .navbar ul { margin: unset; padding: unset; list-style: none; }
 .navbar li { border-top: 1px dotted #FFFFFF; }
 
+/* floating figures/asides */
+.aside {
+	margin: 14px;
+	font-size: 14px;
+	font-style: italic;
+}
+.left  { float: left;  text-align: left;  }
+.right { float: right; text-align: right; }
+.center { margin: 0 auto 0 auto; text-align: center; }
+
 /* svg icons */
 .icon { height: 0.75em; }
 
@@ -89,11 +99,11 @@ code {
 }
 
 /* code blocks in headings */
-h1 code { font-size: unset; }
-h2 code { font-size: unset; }
-h3 code { font-size: unset; }
-h4 code { font-size: unset; }
-h5 code { font-size: unset; }
+h1 code,
+h2 code,
+h3 code,
+h4 code,
+h5 code,
 h6 code { font-size: unset; }
 
 /* terminal */
@@ -143,7 +153,7 @@ tr:nth-child(even) { background: rgba(0, 0, 0, 40%); }
 }
 
 /* changes for mobile devices */
-@media only screen and (max-width: 1160px), (orientation: portrait) {
+@media only screen and (max-width: 1160px) {
 	/* background pic */
 	html { background-size: auto, 300px, auto; }
 	/* flatten to single column layout */
