--- a/static/style.css
+++ b/static/style.css
@@ -311,11 +311,11 @@ tr:nth-child(even) { background: rgba(0, 0, 0, 40%); }
 	font-size: 15px;
 	color: #F07DB4;
 }
-.vocaring-links-top {
-	font-family: Pixel Operator;
-	font-size: 16px;
-	text-shadow: none;
-}
+/*.vocaring-links-top {*/
+/*	font-family: Pixel Operator;*/
+/*	font-size: 16px;*/
+/*	text-shadow: none;*/
+/*}*/
 
 /* changes for mobile devices */
 @media only screen and (max-width: 1160px) {
